io-hotmoka-examples/src/main/java/io/hotmoka/tests/errors/illegaltypeforstoragefield4/MyInterface.java
package io.hotmoka.tests.errors.illegaltypeforstoragefield4;

public interface MyInterface {
}